--- a/package.json
+++ b/package.json
@@ -6,27 +6,25 @@
         "tsc": "tsc",
         "tsc:w": "tsc -w",
         "lite": "lite-server",
-        "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/fadihania/angular1-typescript-systemjs.git"
+        "start": "concurrent \"npm run tsc:w\" \"watch-less\" \"npm run lite\" "
     },
     "keywords": [
         "angular",
         "typescript",
         "systemjs"
     ],
-    "author": "Fadi Hania <http://fadihania.com>",
+    "author": "Kimberly Dauber",
     "license": "MIT",
-    "homepage": "https://github.com/fadihania/angular1-typescript-systemjs#readme",
     "devDependencies": {
+        "@types/angular": "^1.6.28",
+        "angular-ui-bootstrap": "^2.5.0",
         "concurrently": "^1.0.0",
         "lite-server": "^1.3.1",
-        "typescript": "^1.7.5"
+        "typescript": "^2.4.2"
     },
     "dependencies": {
         "angular": "^1.4.8",
+        "moment": "^2.18.1",
         "systemjs": "^0.19.9"
     }
 }
